--- a/IA-Grilling/projet/code/GrillingAirVols.html
+++ b/IA-Grilling/projet/code/GrillingAirVols.html
@@ -14,9 +14,8 @@
 		<div class="header">
 			<span href="projecthtml.html">Grilling Air</span>
 			<div class="header-right">
-				<a href="persopageHTML.html">Placeholder</a>
-				<a class="active" href="GrillingAirVols.html">Listes vols</a>
-
+				<p>Bienvenue:</p>
+				<p id="email">User email</p>
 			</div>
 		</div>
 		<br>
@@ -65,6 +64,6 @@
 	
 	
 <script src="billets-list.js"></script>
-
+<script type="text/javascript" src="email.js"></script>
 
 </html>
