--- a/SI-IAlsoHaveNoName/Projet/code/page_web.html
+++ b/SI-IAlsoHaveNoName/Projet/code/page_web.html
@@ -12,9 +12,10 @@
 
         <div id="main">
             <div id="header">
+                <h1>I Also Have No Name - Réservation de billets d'avion en ligne</h1>
                 <div id="logo">
                     <div id="logo_text">
-                        <h1><a href="page_web.html"><span class="logo_colour">Réservation Billets</span></a></h1>
+                        <h2><a href="page_web.html"><span class="logo_colour">Réservation Billets</span></a></h2>
                        <!--  <h2>?Sous titre?</h2> -->
                     </div>
                 </div>
