--- a/SI-IAlsoHaveNoName/Projet/code/user.html
+++ b/SI-IAlsoHaveNoName/Projet/code/user.html
@@ -11,7 +11,7 @@
                 <table id="trips_list">
                     <tbody id="trips_list"></tbody>
                 </table>
-                <div id="logo"></div>
+                <div class="logo"></div>
             
                 <script src="https://cdn.jsdelivr.net/npm/axios@0.21.0/dist/axios.min.js"></script>
                 <script type="text/javascript" src="../API/class.js"></script>
