--- a/SI-IAlsoHaveNoName/Projet/code/page_web.html
+++ b/SI-IAlsoHaveNoName/Projet/code/page_web.html
@@ -11,29 +11,8 @@
 
     <div id="main">
         <div id="header">
-            <div id="logo">
-                <div id="logo_text">
-                    <h1><a href="page_web.html"><span class="logo_colour">Réservation Billets</span></a></h1>
-                    <!--  <h2>?Sous titre?</h2> -->
-                </div>
-            </div>
-            <div id="menubar">
-                <ul id="menu">
-                    <li class="selected"><a href="page_web.html">Accueil</a></li>
-                    <li><a href="inscription.html">Inscription</a></li>
-                    <li><a href="connexion.html">Connexion</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div id="site_content">
-            
-           
-        </div>
-
-        <div id="footer">
-            <a href="page_web.html">Accueil</a> | <a href="inscription.html">Inscription</a> | <a
-                href="connexion.html">Connexion</a>
+            <div class="logo"></div>
+            <h1><a href="page_web.html"><span class="logo_colour">Réservation Billets</span></a></h1>   
         </div>
     </div>
 
